parser/src/snapshots/squawk_parser__parse__tests__checkpoint.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: CheckPointStmt(
                    Object({}),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    11,
                ),
            },
        ),
    ],
)
