parser/src/snapshots/squawk_parser__parse__tests__create_cast_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: CreateCastStmt(
                    Object({
                        "context": Number(
                            1,
                        ),
                        "func": Object({
                            "ObjectWithArgs": Object({
                                "objargs": Array([
                                    Object({
                                        "TypeName": Object({
                                            "location": Number(
                                                49,
                                            ),
                                            "names": Array([
                                                Object({
                                                    "String": Object({
                                                        "str": String(
                                                            "pg_catalog",
                                                        ),
                                                    }),
                                                }),
                                                Object({
                                                    "String": Object({
                                                        "str": String(
                                                            "int8",
                                                        ),
                                                    }),
                                                }),
                                            ]),
                                            "typemod": Number(
                                                -1,
                                            ),
                                        }),
                                    }),
                                ]),
                                "objname": Array([
                                    Object({
                                        "String": Object({
                                            "str": String(
                                                "int4",
                                            ),
                                        }),
                                    }),
                                ]),
                            }),
                        }),
                        "sourcetype": Object({
                            "TypeName": Object({
                                "location": Number(
                                    14,
                                ),
                                "names": Array([
                                    Object({
                                        "String": Object({
                                            "str": String(
                                                "pg_catalog",
                                            ),
                                        }),
                                    }),
                                    Object({
                                        "String": Object({
                                            "str": String(
                                                "int8",
                                            ),
                                        }),
                                    }),
                                ]),
                                "typemod": Number(
                                    -1,
                                ),
                            }),
                        }),
                        "targettype": Object({
                            "TypeName": Object({
                                "location": Number(
                                    24,
                                ),
                                "names": Array([
                                    Object({
                                        "String": Object({
                                            "str": String(
                                                "int4",
                                            ),
                                        }),
                                    }),
                                ]),
                                "typemod": Number(
                                    -1,
                                ),
                            }),
                        }),
                    }),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    70,
                ),
            },
        ),
    ],
)
