parser/src/snapshots/squawk_parser__parse__tests__create_conversion_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt {
            stmt: CreateConversionStmt(
                Object({
                    "conversion_name": Array([
                        Object({
                            "String": Object({
                                "str": String(
                                    "myconv",
                                ),
                            }),
                        }),
                    ]),
                    "for_encoding_name": String(
                        "UTF8",
                    ),
                    "func_name": Array([
                        Object({
                            "String": Object({
                                "str": String(
                                    "myfunc",
                                ),
                            }),
                        }),
                    ]),
                    "to_encoding_name": String(
                        "LATIN1",
                    ),
                }),
            ),
            stmt_location: 0,
            stmt_len: Some(
                60,
            ),
        },
    ],
)
