parser/src/snapshots/squawk_parser__parse__tests__create_database_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt {
            stmt: CreatedbStmt(
                Object({
                    "dbname": String(
                        "lusiadas",
                    ),
                }),
            ),
            stmt_location: 0,
            stmt_len: Some(
                25,
            ),
        },
        RawStmt {
            stmt: CreatedbStmt(
                Object({
                    "dbname": String(
                        "sales",
                    ),
                    "options": Array([
                        Object({
                            "DefElem": Object({
                                "arg": Object({
                                    "String": Object({
                                        "str": String(
                                            "salesapp",
                                        ),
                                    }),
                                }),
                                "defaction": String(
                                    "DEFELEM_UNSPEC",
                                ),
                                "defname": String(
                                    "owner",
                                ),
                                "location": Number(
                                    49,
                                ),
                            }),
                        }),
                        Object({
                            "DefElem": Object({
                                "arg": Object({
                                    "String": Object({
                                        "str": String(
                                            "salesspace",
                                        ),
                                    }),
                                }),
                                "defaction": String(
                                    "DEFELEM_UNSPEC",
                                ),
                                "defname": String(
                                    "tablespace",
                                ),
                                "location": Number(
                                    64,
                                ),
                            }),
                        }),
                    ]),
                }),
            ),
            stmt_location: 26,
            stmt_len: Some(
                59,
            ),
        },
        RawStmt {
            stmt: CreatedbStmt(
                Object({
                    "dbname": String(
                        "music",
                    ),
                    "options": Array([
                        Object({
                            "DefElem": Object({
                                "arg": Object({
                                    "String": Object({
                                        "str": String(
                                            "LATIN1",
                                        ),
                                    }),
                                }),
                                "defaction": String(
                                    "DEFELEM_UNSPEC",
                                ),
                                "defname": String(
                                    "encoding",
                                ),
                                "location": Number(
                                    109,
                                ),
                            }),
                        }),
                        Object({
                            "DefElem": Object({
                                "arg": Object({
                                    "String": Object({
                                        "str": String(
                                            "template0",
                                        ),
                                    }),
                                }),
                                "defaction": String(
                                    "DEFELEM_UNSPEC",
                                ),
                                "defname": String(
                                    "template",
                                ),
                                "location": Number(
                                    127,
                                ),
                            }),
                        }),
                    ]),
                }),
            ),
            stmt_location: 86,
            stmt_len: Some(
                59,
            ),
        },
    ],
)
