parser/src/snapshots/squawk_parser__parse__tests__create_event_trigger_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt {
            stmt: CreateEventTrigStmt(
                Object({
                    "eventname": String(
                        "ddl_command_start",
                    ),
                    "funcname": Array([
                        Object({
                            "String": Object({
                                "str": String(
                                    "abort_any_command",
                                ),
                            }),
                        }),
                    ]),
                    "trigname": String(
                        "abort_ddl",
                    ),
                }),
            ),
            stmt_location: 0,
            stmt_len: Some(
                93,
            ),
        },
    ],
)
