parser/src/snapshots/squawk_parser__parse__tests__create_extension.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: CreateExtensionStmt(
                    Object({
                        "extname": String(
                            "hstore",
                        ),
                    }),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    23,
                ),
            },
        ),
    ],
)
